--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "check-header",
-  "version": "1.0.0",
+  "name": "@hijup/check-header",
+  "version": "1.0.1",
   "description": "Check if a header name or header value is valid.",
+  "private": false,
   "main": "index.js",
   "module": "index.es.js",
   "scripts": {
@@ -22,8 +23,9 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/m59peacemaker/js-check-header"
+    "url": "https://github.com/hijup/js-check-header"
   },
   "author": "Johnny Hauser <johnnyhauser@gmail.com>",
+  "contributors": ["HIJUP"],
   "license": "CC0-1.0"
 }
